Switch to linux-zen
- https://ck-hack.blogspot.com/2021/08/514-and-future-of-muqss-and-ck-once.html
- zen is in official repos/officially supported

--- a/root/boot/efi/EFI/refind/refind.conf
+++ b/root/boot/efi/EFI/refind/refind.conf
@@ -2,26 +2,29 @@
 # refind.conf
 # Configuration file for the rEFInd boot menu
 #
+# TODO add entry that isn't quiet
 
 timeout 20
 
 scanfor manual,internal
 
-menuentry "Arch Linux CK" {
+menuentry "Arch Linux" {
     icon     /EFI/refind/icons/os_arch.png
     # label
     volume   boot
     # these are relative to the volume! (actually /boot/vmlinuz...)
-    loader   /vmlinuz-linux-ck
-    initrd   /initramfs-linux-ck-custom.img
+    loader   /vmlinuz-linux-zen
+    initrd   /initramfs-linux-zen.img
     # scsi_mod.use_blk_mq=1 needed for scsi and sata drives now for bfq
     # elevator=bfq does not work anymore; need udev rule
     # https://wiki.archlinux.org/index.php/Silent_boot
-    # cryptdevice=LABEL=cryptlinux (requires systemd-git)
+	# https://wiki.archlinux.org/title/Dm-crypt/Specialties#Discard/TRIM_support_for_solid_state_drives_(SSD)
+	# https://asalor.blogspot.com/2011/08/trim-dm-crypt-problems.html
+	# "If plausible deniability is not required, TRIM can be used for its performance gains, provided that the security dangers described at the top of this section are not of concern."
     options  "cryptdevice=LABEL=cryptlinux:cryptlinux:allow-discards resume=/dev/cryptlinux_group/swap root=/dev/cryptlinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash initrd=/intel-ucode.img"
 
     submenuentry "Boot using fallback initramfs" {
-        initrd /initramfs-linux-ck-custom-fallback.img
+        initrd /initramfs-linux-zen-fallback.img
     }
 
     # submenuentry "Boot using systemd initramfs" {
@@ -35,10 +38,10 @@ menuentry "Arch Linux CK" {
 
     submenuentry "Boot using default linux" {
         loader /vmlinuz-linux
-        initrd /initramfs-linux-ck-custom-vanilla.img
+        initrd /initramfs-linux.img
     }
     submenuentry "Boot using fallback default linux" {
         loader /vmlinuz-linux
-        initrd /initramfs-linux-ck-custom-vanilla-fallback.img
+        initrd /initramfs-linux-fallback.img
     }
 }
