--- a/aesthetics/.config/picom.conf
+++ b/aesthetics/.config/picom.conf
@@ -33,6 +33,11 @@ shadow-exclude = [
     "window_type = 'dock'",
     "class_g = 'conky'",
     "class_g = 'slop'",
+    # either of these is necessary to prevent issues with semi-transparent
+    # window backgrounds being increasingly darkened based on hlwm frame
+    # background transparency
+    # "bounding_shaped",
+    "class_g = '_HERBST_FRAME'",
 ];
 
 # * Opacity
