Polybar - Add window count and improving auto-hiding
- Add window count beside window layout icon
- Use xrestart for scripts to prevent running extra zscrolls and other scripts
- Fix hc_watch_fullscreen
  - Only hide panel if current tag is on monitor 0 and fullscreen
  - Switch to babashka (surprisingly suited for scripting)

Also revamp xrestart script
- Make choosing between $! and using pgrep explicit (the default behavior before
  wasn't even necessarily consistent since it relied on the timing of the
  process showing up in pgrep)
- By default use $! (this also means -c is only required with -i)
- Add an option to run in foreground (for polybar)

--- a/aesthetics/.config/polybar/config
+++ b/aesthetics/.config/polybar/config
@@ -74,6 +74,7 @@ foreground = ${colors.foreground}
 ; order matters (first have priority)
 ; text fonts
 font-0 = Office Code Pro:pixelsize=8
+
 ; Japanese font
 font-1 = Ricty Discord:pixelsize=9
 ; alternative Japanese font; not currently used
@@ -232,19 +233,19 @@ icon-9 = 十;
 
 [module/hlwmlayout]
 type = custom/script
-exec = ~/bin/wm/hlwm_layout_icon
+exec = xrestart -fi -c herbstclient hlwm_layout_icon
 tail = true
 
 [module/mpd]
 type = custom/script
-exec = ~/bin/song_scroll
+exec = xrestart -fi -c python song_scroll
 tail = true
 
 label-foreground = ${colors.green}
 
 [module/title]
 type = custom/script
-exec = ~/bin/title_scroll
+exec = xrestart -fi -c python title_scroll
 tail = true
 
 label-foreground = ${colors.cyan}
