Pacman - Update Xyne repo server url

--- a/root/etc/pacman.conf
+++ b/root/etc/pacman.conf
@@ -87,12 +87,11 @@ Include = /etc/pacman.d/mirrorlist
 
 # keep for reflector
 [xyne-x86_64]
-# A repo for Xyne's own projects: https://xyne.archlinux.ca/projects/
+# A repo for Xyne's own projects: https://xyne.dev/projects/
 # Packages for the "x86_64" architecture.
 # Note that this includes all packages in [xyne-any].
 SigLevel = Required
-# Server = https://xyne.archlinux.ca/repos/xyne
-Server = https://xyne.archlinux.ca/bin/repo.php?file=
+Server = https://xyne.dev/repos/xyne
 
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
