Geoclue - Update config based on pacnew

--- a/root/etc/geoclue/geoclue.conf
+++ b/root/etc/geoclue/geoclue.conf
@@ -1,3 +1,6 @@
+# Changes from default
+# - Added redshift section
+
 # Configuration file for Geoclue
 #
 # NOTE: All configurations settings below are mandatory and the defaults are
@@ -42,20 +45,20 @@ enable=true
 # Enable WiFi source
 enable=true
 
-# URL to the wifi geolocation service. The key can currenty be anything, just
-# needs to be present but that is likely going to change in future.
-url=https://location.services.mozilla.com/v1/geolocate?key=16674381-f021-49de-8622-3021c5942aff
+# URL to the WiFi geolocation service. If not set, defaults to Mozilla's
+# Location Service with a hardcoded key. To use a custom key, uncomment this URL
+# while changing YOUR_KEY to your MLS API key.
+#url=https://location.services.mozilla.com/v1/geolocate?key=YOUR_KEY
 
-# To use the Google geolocation service instead of mozilla's, simply uncomment
-# this url while changing API_KEY to your Google API key and comment out or
-# remove the url above.
+# To use the Google geolocation service instead of Mozilla's, uncomment this URL
+# while changing YOUR_KEY to your Google API key.
 #
 # WARNING: Please make sure that you are complying with the Google's ToS and
 #          policies if you uncomment this:
 #
 # https://developers.google.com/maps/documentation/geolocation/policies
 #
-#url=https://www.googleapis.com/geolocation/v1/geolocate?key=AIzaSyDwr302FpOSkGRpLlUpPThNTDPbXcIn_FM
+#url=https://www.googleapis.com/geolocation/v1/geolocate?key=YOUR_KEY
 
 # Submit data to Mozilla Location Service
 # If set to true, geoclue will automatically submit network data to Mozilla
@@ -63,21 +66,20 @@ url=https://location.services.mozilla.com/v1/geolocate?key=16674381-f021-49de-86
 #
 submit-data=false
 
-# URL to submission API of Mozilla Location Service
-submission-url=https://location.services.mozilla.com/v1/submit?key=16674381-f021-49de-8622-3021c5942aff
+# URL to submission API of Mozilla Location Service. If not set, defaults to
+# Mozilla's API with a hardcoded key. To use a custom key, uncomment this URL
+# while changing YOUR_KEY to your MLS API key.
+#submission-url=https://location.services.mozilla.com/v1/submit?key=YOUR_KEY
 
-# A nickname to submit network data with. This is currently used for leaderboard:
-# https://location.services.mozilla.com/leaders
-# A nickname must be 2-32 characters long.
+# A nickname to submit network data with. A nickname must be 2-32 characters long.
 submission-nick=geoclue
 
 # Application configuration options
 #
 # NOTE: Having an entry here for an application with allowed=true means that
 #       geoclue will not ask agent to authorize the application. This is to
-#       ensure that system components and applications with built-in
-#       authorization mechanism (e.g web browsers) do not have to be bound to
-#       agents.
+#       ensure that applications with built-in authorization mechanism (e.g web
+#       browsers) do not have to be bound to agents.
 #
 #       If your application is denied access to location information and your
 #       operating system doesn't provide any mechanism to change that, it is
