--- a/root/etc/optimus-manager/optimus-manager.conf
+++ b/root/etc/optimus-manager/optimus-manager.conf
@@ -7,6 +7,13 @@ pci_power_control=yes
 pci_remove=no
 pci_reset=no
 
+# use GPU only when told to
+startup_mode=hybrid
+
 [nvidia]
 # don't touch DPI
 DPI=
+
+# https://github.com/Askannz/optimus-manager/wiki/A-guide--to-power-management-options#configuration-1--dynamic-power-management-inside-the-nvidia-driver-runtime-d3-power-management
+# allows turning off the nvidia GPU when not in use in hybrid mode (but doesn't support my GPU)
+# dynamic_power_management=fine
