Add sleep-not-hibernate script
In rarer cases when I want to sleep instead of hibernate

--- a/root/etc/systemd/logind.conf.d/acpi-events.conf
+++ b/root/etc/systemd/logind.conf.d/acpi-events.conf
@@ -1,4 +1,5 @@
 [Login]
 # hibernate on laptop close
 HandleLidSwitch=hibernate
-HandleLidSwitchExternalPower=hibernate
+# default; happens if docked or external display connected
+# HandleLidSwitchDocked=ignore
