Emacs - Switch to Dirvish
- Don't bind , in override map so can use it for marking in dired
- Use --almost-all instead of --all for ls listing switches
- Add dired toggle mark keybinding
- Bind gg so it works in dired
- Bind F to search in current project or directory with fd
- Fix quickmarks for dirvish
- Add keybindings to set wallpaper, run dropmpgo, and upscale
- Enable diredfl again
- Use dirvish instead of dired-git-info
- Remove All the Icons Dired
- Remove ranger

Also add rifle support for mvigallery file (long uncomitted change).

--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -81,6 +81,7 @@ map cs shell make_thumbnail %f
 # upscale (ranger_functions)
 map cu shell upscale %f
 map cU shell upscale %f 10
+map cX shell upscale %f 20
 
 # convert file to txt
 map ct shell unoconv -f txt %f
@@ -181,6 +182,9 @@ map K search_next forward=False
 # ** Navigation
 map f console find%space
 map F console travel%space
+# TODO this overwrites ability to get history
+# cmap <up> move up=1
+# cmap <down> move down=1
 # see commands.py
 map tf console fasd%space
 map tp fzf_select
@@ -202,7 +206,7 @@ map <space>t tab_move 0 4
 map <space>d tab_move 0 5
 map <space>h tab_move 0 6
 map <space>n tab_move 0 7
-map <space>e tab_move 0 8 
+map <space>e tab_move 0 8
 map <space>i tab_move 0 9
 map <space>o tab_move 0 10
 
