--- a/media/.config/ranger/rifle.conf
+++ b/media/.config/ranger/rifle.conf
@@ -16,6 +16,9 @@
 ext x?html?, has firefox, X, flag f = firefox "$@"
 ext x?html?, has w3m, terminal = w3m "$@"
 
+# open text file storing gallery url as gallery in mpv/mvi
+file, has mvigallery, name gallery(-dl-url)?$ = tdrop -a auto_hide && mvigallery "$@" ./ && tdrop -a auto_show
+
 # define the "editor" for text files as first action
 mime ^text, label editor = $EDITOR "$@"
 # for some reason, ranger doesn't consider files with certain extensions to be
