Kitty - Don't prompt to close
Also update pager to nvimpager

--- a/terminal/.config/kitty/kitty.conf
+++ b/terminal/.config/kitty/kitty.conf
@@ -53,12 +53,16 @@ include ~/.cache/wal/colors-kitty.conf
 
 # * Scrollback
 # TODO use?
-scrollback_pager vimpager
+# scrollback_pager epipe -c
+# handles colors
+scrollback_pager nvimpager
 # map ctrl+shift+h show_scrollback
 scrollback_lines 10000
 
 # * Other
 shell zsh
+# don't require confirmation to close
+confirm_os_window_close 0
 
 # * Local Config
 include ~/.config/kitty/kitty-local.conf
