Tmux - Fix link-hint integration
Shell commands can no longer go in curly braces in the latest tmux versions.

--- a/terminal/.config/tmux/tmux.conf
+++ b/terminal/.config/tmux/tmux.conf
@@ -217,7 +217,7 @@ bind / capture-pane -S -10000 \; save-buffer /tmp/tmux-buffer \; \
 # url hinting using link-hint.el
 # https://github.com/noctuid/link-hint.el#using-for-links-in-terminal-with-tmux
 bind f capture-pane \; save-buffer /tmp/tmux-buffer \; new-window \
-     { emacsclient -t -e '(noct-terminal-link-hint-file "/tmp/tmux-buffer")' }
+     "emacsclient -t -e '(noct-terminal-link-hint-file \"/tmp/tmux-buffer\")'"
 
 # * Plugins
 # prefix I to install; prefix U to update
