Font - Use Delugia Code (Cascadia/Caskaydia Cove)
- Use Delugia in Emacs, kitty, and polybar
- Check for font existence before adding font to default-frame-alist in
  early-init.el (otherwise Emacs will fail to start); store known fonts to skip check
- Add ligature.el
- Update noct-set-font to allow selecting font from favorites

--- a/aesthetics/.config/polybar/config.ini
+++ b/aesthetics/.config/polybar/config.ini
@@ -73,7 +73,9 @@ foreground = ${colors.foreground}
 
 ; order matters (first have priority)
 ; text fonts
-font-0 = Office Code Pro:pixelsize=8
+; font-0 = Office Code Pro D:pixelsize=8
+; intentionally not nerd font
+font-0 = Cascadia Code:pixelsize=8
 
 ; Japanese font
 font-1 = Ricty Discord:pixelsize=9
@@ -86,8 +88,10 @@ font-3 = Siji:pixelsize=9
 font-4 = Font Awesome 6 Free:style=Solid:pixelsize=8
 font-5 = Font Awesome 6 Free:pixelsize=8
 font-6 = Font Awesome 6 Brands:pixelsize=8
-; other icons; alternative icons
+; other icons; alternative icons; currently only used for leaf on herbstluftwm
+; these both give the same result
 font-7 = FuraMono Nerd Font:pixelsize=9
+; font-7 = Delugia:pixelsize=16
 ; not used here, may be useful for website titles
 font-8 = Symbola:pixelsize=9
 font-9 = Unifont:style=Sans-Serif
