--- a/terminal/.config/kitty/kitty.conf
+++ b/terminal/.config/kitty/kitty.conf
@@ -7,7 +7,12 @@
 inactive_text_alpha 0.6
 
 # ** Font
-font_family Fura Code Nerd Font
+# font_family agave Nerd Font Mono
+# font_size 11
+# ligatures work in kitty
+# font_family Fira Code Nerd Font
+# font_size 10
+font_family Delugia
 font_size 10
 
 # ** Colorscheme
