Picom - Reduce blur strength

--- a/aesthetics/.config/picom.conf
+++ b/aesthetics/.config/picom.conf
@@ -10,21 +10,30 @@
 # https://github.com/yshui/picom/issues/97#issuecomment-458719856
 # https://github.com/yshui/picom/issues/37
 
-# TODO
-# - https://github.com/yshui/picom/issues/32
+# - TODO would be nice to be able to use env vars (e.g. for corner-radius)
+# - TODO --experimental-backends once rounded corners is supported
 
 # * General
 backend = "glx";
-glx-no-stencil = true;
-# TODO does this setting still exist?
-glx-copy-from-front = false;
 
+# manpage: "My tests show a 15% performance boost. Recommended."
+glx-no-stencil = true;
+
+# manpage: "Probably could improve performance on rapid window content changes,
+# but is known to break things on some drivers (LLVMpipe, xf86-video-intel,
+# etc.). Recommended if it works."
+glx-no-rebind-pixmap = true;
+
+# default; only redraw changed parts of screen
+use-damage = true;
+
+# * Tearing
+# TODO try xr_glx_hybrid with/without --vsync-use-glfinish
 vsync = true;
 
-# disable compositing on full screen windows for performance
-unredir-if-possible = true;
-
-use-damage = true;
+# don't unredirect all windows when there is an opaque fullscreen window (true
+# maximizes performance but disables compositing)
+unredir-if-possible = false;
 
 # * Shadows
 shadow = true;
@@ -51,7 +60,7 @@ opacity-rule = [
 # * Blurring
 # blur background of transparent windows
 blur-background = true;
-blur-strength = 6;
+blur-strength = 4;
 blur-method = "dual_kawase";
 
 blur-background-exclude = [
@@ -75,6 +84,13 @@ fade-exclude = [
 
 # * Rounded Corners
 corner-radius = 15.0;
+
+# keep for now
+# https://github.com/polybar/polybar/issues/651
+# rounded-corners-exclude = [
+#     # let polybar round its own corners
+#     "class_g = 'Polybar'",
+# ]
 
 # * Focus
 # consider these windows always focused (so not dimmed)
