Ranger - Add png compression and conversion keybindings
Add keybindings for oxipng, pngquant, and cwebp.

Also make sort keybindings consistent with dirvish (o not co prefix).

--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -78,7 +78,7 @@ map cm shell convert -flop %f flopped_%f
 # make a 100x100 thumbnail (ranger_functions)
 map cs shell make_thumbnail %f
 
-# upscale (ranger_functions)
+# upscale
 map cu shell upscale %f
 map cU shell upscale %f 10
 map cX shell upscale %f 20
@@ -91,6 +91,17 @@ map cp shell unoconv -f pdf %f
 # japanese image to text
 map cj shell tesseract -l jpn %f %f &
 
+# image conversion/compression
+unmap ci
+map ciw shell cwebp_autoname -mt -q 100 %f
+map ciW shell cwebp_autoname -mt -near_lossless 60 %f
+
+# lossless png compression in-place
+# higher than opt 4 not recommended (barely more compression)
+map cip shell oxipng --opt 4 --strip safe %f
+# lossy png compression (but big savings); new -fs8.png file
+map ciP shell pngquant %f
+
 # replace cw mapping
 map cc console rename
 
@@ -99,7 +110,7 @@ map cc console rename
 # map ta shell mutt -a %s || mutt -a %f
 
 # import music in current directory with beets
-map bi shell beet import .
+map cB shell beet import .
 
 # upload to imgur; using function (t for title, c for caption)
 map ui console -p13 shell imp -t -c %%f
@@ -146,8 +157,7 @@ map tm maximize_preview
 map , mark_files toggle=True
 map x mark_files toggle=True
 
-map o console shell%space
-map O console -p6 shell  %f
+map <return> console shell%space
 
 map tw chain draw_possible_programs; console open_with%space
 
@@ -215,25 +225,25 @@ map gb cd /bin
 
 # ** Sorting
 # (default o* mappings; changed to co*); change Order
-map cor toggle_option sort_reverse
-map coz set sort=random
-map cos chain set sort=size;      set sort_reverse=False
-map cob chain set sort=basename;  set sort_reverse=False
-map con chain set sort=natural;   set sort_reverse=False
-map com chain set sort=mtime;     set sort_reverse=False
-map coc chain set sort=ctime;     set sort_reverse=False
-map coa chain set sort=atime;     set sort_reverse=False
-map cot chain set sort=type;      set sort_reverse=False
-map coe chain set sort=extension; set sort_reverse=False
+map or toggle_option sort_reverse
+map oz set sort=random
+map os chain set sort=size;      set sort_reverse=False
+map ob chain set sort=basename;  set sort_reverse=False
+map on chain set sort=natural;   set sort_reverse=False
+map om chain set sort=mtime;     set sort_reverse=False
+map oc chain set sort=ctime;     set sort_reverse=False
+map oa chain set sort=atime;     set sort_reverse=False
+map ot chain set sort=type;      set sort_reverse=False
+map oe chain set sort=extension; set sort_reverse=False
 
-map coS chain set sort=size;      set sort_reverse=True
-map coB chain set sort=basename;  set sort_reverse=True
-map coN chain set sort=natural;   set sort_reverse=True
-map coM chain set sort=mtime;     set sort_reverse=True
-map coC chain set sort=ctime;     set sort_reverse=True
-map coA chain set sort=atime;     set sort_reverse=True
-map coT chain set sort=type;      set sort_reverse=True
-map coE chain set sort=extension; set sort_reverse=True
+map oS chain set sort=size;      set sort_reverse=True
+map oB chain set sort=basename;  set sort_reverse=True
+map oN chain set sort=natural;   set sort_reverse=True
+map oM chain set sort=mtime;     set sort_reverse=True
+map oC chain set sort=ctime;     set sort_reverse=True
+map oA chain set sort=atime;     set sort_reverse=True
+map oT chain set sort=type;      set sort_reverse=True
+map oE chain set sort=extension; set sort_reverse=True
 
 # ** Git
 # add selection or highlighted files to git index (git add)
