Actually fix duplicate process issue for herbstluftwm and polybar
- Use exec for zscroll scripts
- Use babashka for all herbstclient watch scripts (I couldn't find any way to
  get things working when piping herbstclient into awk; grepping for
  herbstclient using xrestart -i can work, but there is potential for a timing
  issue when starting multiple herbstclient instances)

Also
- Add generic bar option to polybar config
- Set layout to max for default hlwm tag

--- a/aesthetics/.config/polybar/config.ini
+++ b/aesthetics/.config/polybar/config.ini
@@ -125,11 +125,16 @@ offset-y = 0
 wm-text =  stubwm
 modules-left = wm-text ewmh mpd
 
+[bar/generic]
+inherit = bar/base
+
+modules-left = ewmh mpd
+
 [bar/herbstluftwm]
 inherit = bar/base
 
 ; like fura mono leaf better
-wm-text = %{T8}%{T-} holowm
+wm-text = %{T8}%{T-}  holowm
 modules-left = wm-text ewmh hlwmlayout mpd
 
 [settings]
@@ -237,19 +242,19 @@ icon-9 = 十;
 
 [module/hlwmlayout]
 type = custom/script
-exec = xrestart -fi -c herbstclient hlwm_layout_icon
+exec = xrestart -f hlwm_layout_icon
 tail = true
 
 [module/mpd]
 type = custom/script
-exec = xrestart -fi -c python song_scroll
+exec = xrestart -f song_scroll
 tail = true
 
 label-foreground = ${colors.green}
 
 [module/title]
 type = custom/script
-exec = xrestart -fi -c python title_scroll
+exec = xrestart -f title_scroll
 tail = true
 
 label-foreground = ${colors.cyan}
