--- a/common/.gnupg/gpg-agent.conf
+++ b/common/.gnupg/gpg-agent.conf
@@ -7,6 +7,8 @@ max-cache-ttl 86400
 enable-ssh-support
 
 # PIN entry program
-pinentry-program /usr/bin/pinentry-qt
-# pinentry-program /usr/bin/pinentry-gtk-2
+# pinentry-program /usr/bin/pinentry-qt
+pinentry-program /usr/bin/pinentry-gtk-2
 # pinentry-program /usr/bin/pinentry-curses
+# completely steals input
+# pinentry-program /us/bin/pinentry-gnome3
