my-xorg.conf - Add old changes

--- a/root/etc/X11/xorg.conf.d/my-xorg.conf
+++ b/root/etc/X11/xorg.conf.d/my-xorg.conf
@@ -9,7 +9,8 @@ Section "ServerLayout"
 EndSection
 
 # * Button Config
-# TODO doesn't work
+# doesn't work
+# simpler to handle in rldkbd anyway
 # using these buttons as modifiers
 # Section "InputClass"
 #     Identifier "TrackPoint Altered Buttons"
@@ -27,4 +28,14 @@ Section "InputClass"
     Option "AccelerationProfile" "-1"
     Option "AccelerationScheme" "none"
     Option "AccelSpeed" "-1"
+EndSection
+
+# * Maybe workaround for x crashing issue
+# https://bugzilla.redhat.com/show_bug.cgi?id=1630367#c18
+# NOTE: not sure if this actually worked (don't remember whether I was having
+# crashes with optimus manager or with nvidia-xrun, but I do not currently have
+# the issue with optimus manage)
+Section "Device"
+	Identifier "Intel Graphics"
+	Driver "intel"
 EndSection
