Mvi - Update config
- Add extra toggle-image-mark keybindings
- Add symlink to gallery-dl-view repo and add config

--- a/media/.config/mvi/input.conf
+++ b/media/.config/mvi/input.conf
@@ -30,9 +30,9 @@ b script-message toggle-status-line
 # * Disable Screenshots
 # TODO maybe this could be useful for modifying image and then taking a
 # screenshot of the result?
-s ignore
 S ignore
 ctrl+s ignore
+s script-message gallery-dl-download-url
 
 # * Navigation and Panning/Scrolling
 h repeatable playlist-prev
@@ -105,6 +105,8 @@ c script-message noct-toggle-contact-sheet
 # ./scripts/noct-image-util.lua
 , script-message toggle-image-mark
 . script-message toggle-image-mark alt
+/ script-message toggle-image-mark alt2
+' script-message toggle-image-mark alt3
 
 # * Profile Switching
 p ignore
