Mpv - Update config
- Add loopmarks keybindings
- Remove keybinding I kept accidentally pressing to send mpv to the shadow realm

--- a/media/.config/mpv/input.conf
+++ b/media/.config/mpv/input.conf
@@ -54,7 +54,6 @@
 # - https://gitlab.com/derobert/mpv-volnorm
 # - https://github.com/sbruder/mpv-matroska-crop
 # - https://github.com/hdbhdb/mpv-live-filters
-# - https://github.com/jonniek/mpv-filenavigator
 # - https://github.com/torque/mpv-progressbar
 # - https://github.com/wiiaboo/mpv-scripts/blob/master/auto-profiles.lua
 # - https://github.com/mfcc64/mpv-scripts/blob/master/visualizer.lua
@@ -97,8 +96,9 @@ t-a cycle audio
 ( script-binding balance-to-left
 ) script-binding balance-to-right
 = script-binding reset-balance
+# force mono audio
 # https://github.com/mpv-player/mpv/issues/6697
-M af toggle "lavfi=[pan=1c|c0=0.5*c0+0.5*c1]"
+t-M af toggle "lavfi=[pan=1c|c0=0.5*c0+0.5*c1]"
 
 # * Loops and Video Cutting
 # default
@@ -111,6 +111,21 @@ b run "mkdir" "-p" "/tmp/ffcut" ; run "/bin/sh" "-c" "echo ${=time-pos} > /tmp/f
 c set ab-loop-a no ; set ab-loop-b no
 
 G run "/bin/sh" "-c" "echo '${path}' > /tmp/ffcut/last_file" ; run "ffcut" "${path}"
+
+# * Loopmarks
+t-m ignore
+t-m-a script-message loopmarks-toggle-tag action
+t-m-c script-message loopmarks-toggle-tag comedy
+t-m-d script-message loopmarks-toggle-tag dialogue
+t-m-e script-message loopmarks-toggle-tag ed
+t-m-o script-message loopmarks-toggle-tag op
+
+t-f ignore
+t-f-a script-message loopmarks-toggle-filter-tag action
+t-f-c script-message loopmarks-toggle-filter-tag comedy
+t-f-d script-message loopmarks-toggle-filter-tag dialogue
+t-f-e script-message loopmarks-toggle-filter-tag ed
+t-f-o script-message loopmarks-toggle-filter-tag op
 
 # * Miscellaneous
 # default
@@ -198,7 +213,9 @@ t-i add sub-delay +0.1
 
 # * Video
 # cycle through video streams
-t-v cycle video
+# TODO only enable this if find a setting to keep the MPV window open when video
+# is disabled
+# t-v cycle video
 
 # default
 A cycle-values video-aspect "16:9" "4:3" "2.35:1" "-1"
