Update GPG agent/pinentry setup
- Use Emacs for pinentry inside Emacs where possible
- Use same cache times for ssh and gpg key passwords

--- a/common/.gnupg/gpg-agent.conf
+++ b/common/.gnupg/gpg-agent.conf
@@ -1,7 +1,13 @@
 # cache passwords for (another) 3 hours after use
+# default is 10 minutes
 default-cache-ttl 10800
-# cache passwords for 24 hours max
-max-cache-ttl 86400
+# default 30 minutes
+default-cache-ttl-ssh 10800
+
+# cache passwords for 18 hours max (default 2 hours)
+max-cache-ttl 64800
+# default 2 hours
+max-cache-ttl-ssh 64800
 
 # gpg's ssh-agent must be explicitly enabled
 enable-ssh-support
@@ -12,3 +18,6 @@ pinentry-program /usr/bin/pinentry-gtk-2
 # pinentry-program /usr/bin/pinentry-curses
 # completely steals input
 # pinentry-program /us/bin/pinentry-gnome3
+
+# allow Emacs to handle pinentry when needed inside Emacs
+allow-emacs-pinentry
