Polybar - Add icon showing whether using wireguard

--- a/aesthetics/.config/polybar/config.ini
+++ b/aesthetics/.config/polybar/config.ini
@@ -101,7 +101,7 @@ font-9 = Unifont:style=Sans-Serif
 font-10 = Siji:pixelsize=13
 
 modules-center = title
-modules-right = memory cpu temperature battery backlight volume wlan eth date
+modules-right = memory cpu temperature battery backlight volume wlan eth wg date
 
 tray-position = right
 tray-padding = 2
@@ -238,7 +238,10 @@ icon-6 = 七;
 icon-7 = 八;
 icon-8 = 九;
 ; or tv: 
+; 鳥居
 icon-9 = 十;
+; dungeon
+; icon-9 = 十;
 
 [module/hlwmlayout]
 type = custom/script
@@ -380,6 +383,10 @@ format-connected-prefix = " "
 label-connected = %local_ip%
 
 format-disconnected =
+
+[module/wg]
+type = custom/script
+exec = ~/.config/polybar/wg.sh
 
 ; Local Variables:
 ; eval: (rainbow-mode 1)
