MPV/MVI improvements
- Use --force-window for mpv instances where no commandline (so don't accidentally permanently hide an mpv window by changing the video source); use always for mvi
- Add more sub delay keybindings
- Dlg improvements
  - Add support for cookie file
  - Limit max downloads and connections
- Add previously uncommitted mvigallery script
- Add shared utils file for dlg andmvigallery

--- a/media/.config/mpv/input.conf
+++ b/media/.config/mpv/input.conf
@@ -207,15 +207,22 @@ t-n add sub-pos +1
 t-e add sub-pos -1
 
 # subtract 100ms delay from subs
-t-h add sub-delay -0.1
-# add
-t-i add sub-delay +0.1
+x add sub-delay -0.1
+X add sub-delay +0.1
+t-, add sub-delay -1
+t-. add sub-delay +1
+# for rare cases where subs are very off (e.g. by 30-60s+)
+t-h add sub-delay -5
+t-i add sub-delay +5
+# reset sub delay
+t-y set sub-delay 0
 
 # * Video
 # cycle through video streams
-# TODO only enable this if find a setting to keep the MPV window open when video
-# is disabled
-# t-v cycle video
+# NOTE: Use --force-window when not running in terminal or cycling can hide mpv
+# window with no way to get it back
+# _ ignore
+t-v cycle video
 
 # default
 A cycle-values video-aspect "16:9" "4:3" "2.35:1" "-1"
